; ModuleID = '/home/carl/AnghaBench/git/extr_ref-filter.c_new_ref_array_item.c'
source_filename = "/home/carl/AnghaBench/git/extr_ref-filter.c_new_ref_array_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_array_item = type { i32 }
%struct.object_id = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ref_array_item* (i8*, %struct.object_id*)* @new_ref_array_item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ref_array_item* @new_ref_array_item(i8* %0, %struct.object_id* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.object_id*, align 8
  %5 = alloca %struct.ref_array_item*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.object_id* %1, %struct.object_id** %4, align 8
  %6 = load %struct.ref_array_item*, %struct.ref_array_item** %5, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @FLEX_ALLOC_STR(%struct.ref_array_item* %6, i8* %7, i8* %8)
  %10 = load %struct.ref_array_item*, %struct.ref_array_item** %5, align 8
  %11 = getelementptr inbounds %struct.ref_array_item, %struct.ref_array_item* %10, i32 0, i32 0
  %12 = load %struct.object_id*, %struct.object_id** %4, align 8
  %13 = call i32 @oidcpy(i32* %11, %struct.object_id* %12)
  %14 = load %struct.ref_array_item*, %struct.ref_array_item** %5, align 8
  ret %struct.ref_array_item* %14
}

declare dso_local i32 @FLEX_ALLOC_STR(%struct.ref_array_item*, i8*, i8*) #1

declare dso_local i32 @oidcpy(i32*, %struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
